tests/baselines/reference/emitArrowFunctionWhenUsingArguments04(target=es2015).errors.txt
emitArrowFunctionWhenUsingArguments04.ts(2,9): error TS1100: Invalid use of 'arguments' in strict mode.


==== emitArrowFunctionWhenUsingArguments04.ts (1 errors) ====
    function f() {
        var arguments;
            ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        var a = () => arguments;
    }